--- a/noman.css
+++ b/noman.css
@@ -4,3 +4,12 @@ div{
    margin-bottom: 10px;
    border-radius: 5%;
 }
+.n{
+
+    width: 150px;
+    height: 100px;
+}
+img{
+
+    border: 10px solid tomatog;
+}
